{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "6bcc9df7-2b91-44eb-89c9-4d6a84c8a349",
            "actions": [
                {
                    "name": "InputVector",
                    "type": "Value",
                    "id": "ebbe77b7-ba0e-44d5-8b41-4c20815ce8a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "1664ffeb-1b55-445e-abf7-b67faa528d98",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputVector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "044f8a71-03ca-431d-8d05-a04a3d5b2f07",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "72c646b7-d3dc-466f-acae-bd8b415b4451",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0080ef83-b65c-4329-baf3-b8df75ee8aa8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "584cba55-8e7c-417c-9b45-be2dcd477ed8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Action",
            "id": "ba94f062-2568-4fef-8e2d-72b34609a7e7",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "677c28b4-9d5b-4a7f-8846-91a2e5f34ec7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00e76705-da60-4830-8dcb-0aebd05b2ac4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}